--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Entre Raízes e Caminhos — Histórias</title>
   <link rel="stylesheet" href="assets/css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
@@ -27,7 +26,7 @@
     <section class="hero">
       <div class="container">
         <h1>Nossas Histórias</h1>
-  <p class="lead">Um recorte de memórias, descobertas e afetos. Narrativas que formaram minha trajetória — das heranças indígenas e nordestinas às experiências na metrópole. Aqui reúno lembranças e encontros: histórias contadas à mesa, nomes que atravessam gerações e pequenos rituais do cotidiano que acabaram por moldar desejos e escolhas. São relatos de travessias, acolhimentos e desencontros, de perdas e de risos, cheios de cores, cheiros e sotaques. Percorrer esses textos é passear por paisagens íntimas e públicas, por gestos e ofícios que ajudam a desenhar o que sou hoje.</p>
+        <p class="lead">Cada história aqui é um pedaço de nós. Das raízes familiares às experiências que nos transformaram, reunimos memórias que moldaram quem somos. São relatos sinceros, cheios de vida e sentimento, que convidam você a conhecer nossa jornada pessoal.</p>
       </div>
     </section>
 
@@ -68,6 +67,11 @@
             <p>Reflexões sobre fé, religiosidade e respeito à pluralidade.</p>
             <a class="readmore" href="joao/aula-6.html">Ler história completa →</a>
           </article>
+          <article class="card">
+            <h4>Avaliação Parcial - Novos entendimentos</h4>
+            <p>Uma reflexão sobre os aprendizados obtidos através dos textos dos colegas, abordando diversidade cultural, relações étnico-raciais, gênero, família e religiosidade.</p>
+            <a class="readmore" href="joao/avaliacao-parcial.html">Ler história completa →</a>
+          </article>
         </div>
       </section>
 
@@ -76,9 +80,8 @@
     <section id="integrantes" class="container contact">
       <h2>Integrantes</h2>
       <ul class="members">
-        <li>Nicoly da Silva Oliveira Cupertino</li>
-        <li>Renato Tavares Garcia</li>
         <li>João Pedro Pires da Silva</li>
+        <li>RA: 11202421491</li>
       </ul>
     </section>
   </main>
