--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <main>
     <section class="hero">
       <div class="container">
-        <h1>Nossas Histórias</h1>
-        <p class="lead">Cada história aqui é um pedaço de nós. Das raízes familiares às experiências que nos transformaram, reunimos memórias que moldaram quem somos. São relatos sinceros, cheios de vida e sentimento, que convidam você a conhecer nossa jornada pessoal.</p>
+        <h1>Minha História</h1>
+        <p class="lead">Através dessas páginas, compartilho fragmentos das memórias que me formaram. São lembranças da minha família, das tradições que herdei e dos encontros que marcaram minha trajetória. Cada uma delas me ajuda a entender melhor quem sou e de onde venho — uma jornada pessoal de autodescoberta e pertencimento.</p>
       </div>
     </section>
 
